<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.nihaskalam.automobilenewsapp.domain.model.Data" />

        <variable
            name="header"
            type="String" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground">

        <ImageView
            android:id="@+id/upButton"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/up_button"
            android:focusable="true"
            android:padding="@dimen/dimen_8dp"
            android:src="@drawable/arrow_left"
            app:layout_constraintBottom_toTopOf="@id/scrollView"
            app:layout_constraintEnd_toStartOf="@id/headerTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/ui_label_details_page_header"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="@id/upButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/upButton"
            app:layout_constraintTop_toTopOf="@id/upButton"
            tools:text="@string/app_name" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upButton">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/newsContentCL"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upButton">

                <ImageView
                    android:id="@+id/newsIV"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_250dp"
                    android:contentDescription="@string/app_name"
                    app:imageUrl="@{item.imageUrl}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/car_logo" />

                <TextView
                    android:id="@+id/titleTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/dimen_16dp"
                    android:text="@{item.title}"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newsIV"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/authorTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/dimen_16dp"
                    android:text="@{item.author + ` | ` + item.date}"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="@color/secondaryTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleTV"
                    tools:text="author" />

                <TextView
                    android:id="@+id/descriptionTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/dimen_16dp"
                    android:text="@{item.content}"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/authorTV"
                    tools:text="Tesla CEO Elon Musk responded to a Twitter user who asked about Tesla's plans for a manufacturing plant in India" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>