<resources>
    <string name="app_name">AutomobileNewsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ui_label_read_more">Read More</string>
    <string name="up_button">Up button</string>
    <string name="ui_label_details_page_header">Automobile</string>
    <string name="ui_label_automobile_news">Automobile News</string>
</resources>