...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerTV"
            tools:context=".news.list.NewsListFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newsRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/appBackground"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_news" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
